5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_1577.log
== TEST (2019-05-23 11:44:46) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a velocidade:"))
n = int(input("insira o numero n:"))

i = 0
t = arrange(n)
d = zeros(n)

while(i < size(t)):
	d[i] = a * t[i]**2/2 + vo * t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:44:47) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a velocidade:"))
n = int(input("insira o numero n:"))

i = 0
t = arrange(n)
d = zeros(n)

while(i < size(t)):
	d[i] = a * t[i]**2/2 + vo * t[i]
	i = i + 1

print(d)

-- EXECUTION TIME:
4.63227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 7, in <module>
    t = arrange(n)
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:45:10) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a velocidade:"))
n = int(input("insira o numero n:"))

i = 0
t = arange(n)
d = zeros(n)

while(i < size(t)):
	d[i] = a * t[i]**2/2 + vo * t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:45:23) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a velocidade:"))
n = int(input("insira o numero n:"))

i = 0
t = arange(n)
d = zeros(n)

while(i < size(t)):
	d[i] = a * t[i]**2/2 + vo * t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:45:25) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a velocidade:"))
n = int(input("insira o numero n:"))

i = 0
t = arange(n)
d = zeros(n)

while(i < size(t)):
	d[i] = a * t[i]**2/2 + vo * t[i]
	i = i + 1

print(d)

-- EXECUTION TIME:
5.50697
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:05:48) 
-- CODE:
a = float(input("insira a aceleracao:"))
vo = float(input("insira a aceleracao:"))
n = int(input("insira a velocidade:"))

i = 0
t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
d = zeros(n)# criando vetor d com zeros na quantiade n

while(i < n);
	d[i] = (a*t[i]**2)/2 + vo*t[i]
	i = i + 1

print(d)

-- ERROR:
File "XXXX", line 9
    while(i < n);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:06:02) 
-- CODE:
a = float(input("insira a aceleracao:"))
vo = float(input("insira a aceleracao:"))
n = int(input("insira a velocidade:"))

i = 0
t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
d = zeros(n)# criando vetor d com zeros na quantiade n

while(i < n):
	d[i] = (a*t[i]**2)/2 + vo*t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:06:39) 
-- CODE:
a = float(input("insira a aceleracao:"))
vo = float(input("insira a aceleracao:"))
n = int(input("insira a velocidade:"))

i = 0
t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
d = zeros(n)# criando vetor d com zeros na quantiade n

while(i < n):
	d[i] = (a*t[i]**2)/2 + vo*t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:07:08) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a aceleracao:"))
n = int(input("insira a velocidade:"))

i = 0
t = arrange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
d = zeros(n)# criando vetor d com zeros na quantiade n

while(i < n):
	d[i] = (a*t[i]**2)/2 + vo*t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:07:47) 
-- CODE:
from numpy import *
a = float(input("insira a aceleracao:"))
vo = float(input("insira a aceleracao:"))
n = int(input("insira a velocidade:"))

i = 0
t = arange(n) #arrange serve para fazer uma contagem crescente de zero a infinito
d = zeros(n)# criando vetor d com zeros na quantiade n

while(i < n):
	d[i] = (a*t[i]**2)/2 + vo*t[i]
	i = i + 1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
